[workspace]
members = [
    "ch02_1_guessing_game",
    "ch03_1_variables",
    "ch03_2_functions",
    "ch03_3_branches",
    "ch03_4_loops",
    "ch03_5_challenges",
    "ch05_1_structs",
    "ch05_2_rectangles",
    "ch08_1_vectors",
    "ch08_2_strings",
    "ch08_3_hashmaps",
    "ch08_4_challenges",
    "ch09_1_panic",
    "ch09_2_result_enums",
    "ch12_1_minigrep",
]
resolver = "2"
edition = "2021"
